--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # 내 wifi
 # REACT_APP_API_URL=http://192.168.13.110:8080/
-REACT_APP_API_URL=http://172.20.10.9:8083/
+# REACT_APP_API_URL=http://172.20.10.9:8001/
+REACT_APP_API_URL = http://192.168.170.110:8001/
 REACT_APP_ENV=dev
